Fix logged in message display on small screens

--- a/src/App/wwwroot/css/App/03Authenticated.scss
+++ b/src/App/wwwroot/css/App/03Authenticated.scss
@@ -12,3 +12,11 @@
 .btn-group + .panel {
     margin-top: 1em;
 }
+
+// Fix logged in message display on small screens
+@media (max-width: $screen-xs-max) { 
+    .navbar .navbar-text {
+        text-align: right;
+        padding-right: 1em;
+    }
+}
